<resources>
    <string name="app_name">TopNews</string>
    <string name="button_retry">Retry</string>
    <string name="not_loaded">Results could not be loaded</string>
    <string name="not_loaded_footer">Failed to fetch next page. Press "Retry" button to try again</string>
    <string name="home">Home</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="technology">Technology</string>
    <string name="movies">Movies</string>
    <string name="travel">Travel</string>
    <string name="choose_text_size">Choose text size</string>

    <string-array name="text_size">
        <item>14sp</item>
        <item>16sp</item>
        <item>18sp</item>
    </string-array>
</resources>